fix issue with new bridge tool interpolation [#35636]